Ingame with hover text, not aligned